--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@mantine/core": "^7.3.2",
     "@mantine/hooks": "^7.3.2",
     "atomic-router": "^0.9.3",
+    "atomic-router-react": "^0.9.1",
     "effector": "^23.1.0",
     "effector-react": "^23.1.0",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@effector/swc-plugin": "^0.0.10",
+    "@swc/core": "^1.3.101",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "^20.10.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -27,6 +33,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
