--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "atomic-router-react": "^0.9.1",
     "effector": "^23.1.0",
     "effector-react": "^23.1.0",
+    "effector-storage": "^7.0.0",
     "history": "^5.3.0",
     "patronum": "^2.1.1",
     "react": "^18.2.0",
