--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "clsx": "^2.1.0",
     "eslint": "^8.56.0",
+    "eslint-plugin-effector": "^0.12.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "npm-check-updates": "^16.14.12",
