--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.5.0",
-    "@mantine/hooks": "^7.5.0",
-    "@tabler/icons-react": "^2.46.0",
-    "atomic-router": "^0.10.0",
-    "atomic-router-react": "^0.9.1",
-    "effector": "^23.1.0",
-    "effector-react": "^23.1.0",
+    "@farfetched/core": "^0.11.4",
+    "@mantine/core": "^7.6.1",
+    "@mantine/hooks": "^7.6.1",
+    "@tabler/icons-react": "^2.47.0",
+    "atomic-router": "^0.10.1",
+    "atomic-router-react": "^0.10.0",
+    "effector": "^23.2.0",
+    "effector-react": "^23.2.0",
     "effector-storage": "^7.0.0",
     "history": "^5.3.0",
     "patronum": "^2.2.0",
@@ -25,23 +26,22 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^20.11.10",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "clsx": "^2.1.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-effector": "^0.13.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "npm-check-updates": "^16.14.14",
-    "postcss": "^8.4.33",
-    "postcss-preset-mantine": "^1.12.3",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "vite": "^5.1.4"
   }
 }
